[package]
name = "starfield"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
macroquad = "0.3.13"
macroquad-canvas-2d = "0.2.1"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev.package.'*']
opt-level = 3
